feat: update playground for testing

--- a/playground/index.html
+++ b/playground/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>vanilla-themes</title>
+</head>
+
+<body>
+  <div id="app">
+    <h1>Theme</h1>
+    <input type="radio" name="theme" value="auto" checked />Auto
+    <input type="radio" name="theme" value="light" />Light
+    <input type="radio" name="theme" value="dark" />Dark
+    <input type="radio" name="theme" value="custom" />Custom
+  </div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
