feat(playgound): add remove theme button

--- a/playground/index.html
+++ b/playground/index.html
@@ -18,6 +18,7 @@
       <input type="radio" name="theme" value="custom" />Custom
       <br />
       <input type="checkbox" name="sync" />Sync
+      <input type="button" name="btnRemove" value="Remove" />
     </form>
   </div>
   <script type="module" src="/src/main.ts"></script>
